# OTUS-HW-1

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  conanfile.txt  main.cpp
.github/workflows/: release.yml  static.yml
back/: CMakeLists.txt  back.cpp
back/api/back/: back.h  fwd.h
bulk_client/: CMakeLists.txt  main.cpp
editor/: CMakeLists.txt  app.cpp  app.h  document.cpp  document.h  editor.cpp  fwd.h  pch.h
editor/api/editor/: IApp.h  IDocument.h  IObj.h  editor.h  fwd.h  structs.h
editor/api/editor/shapes/: ICircle.h  ILine.h  IPoint.h  IRectangle.h  IShape.h  IShapes.h
editor/shapes/: circle.cpp  circle.h  line.cpp  line.h  point.cpp  point.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shapes.cpp  shapes.h
ffinder/: CMakeLists.txt  ffinder.cpp  pch.h
ffinder/api/ffinder/: ffinder.h  fwd.h
front/: CMakeLists.txt  front.cpp
front/api/front/: fwd.h  ifront.h
include/prop_react/: eventable_base.h  property.h  scoped_connection.h
include/prop_react/detail/: common_concepts.h  prop_base.h  prop_simple.h  prop_struct.h
ip_parser/: CMakeLists.txt  ip_parser.cpp  ip_parser.h
lib/: CMakeLists.txt  lib.cpp  lib.h
libasync/: CMakeLists.txt  libasync.cpp
libasync/api/: libasync.h
libasync/back/: CMakeLists.txt  back.cpp  pch.h
libasync/back/api/back/: back.h
libasync/front/: CMakeLists.txt  front.cpp  pch.h
libasync/front/api/front/: front.h  ifront.h
libasync/tasks_thread/: CMakeLists.txt  tasks_thread.h
libasync/tests/: CMakeLists.txt  test.cpp
matrix/: CMakeLists.txt  matrix.cpp  pch.h
matrix/api/matrix/: fwd.h  matrix.h
my_allocator/: CMakeLists.txt  my_allocator.h  my_vector.h
my_lib/: CMakeLists.txt  my_traits.h
test/: CMakeLists.txt  property_test.cpp  test.cpp
tests/: CMakeLists.txt  test.cpp
tests/test_dirs/1/: new 1.txt  wincmd - No copy.ini
tests/test_dirs/2/: VSColorOutput.vsix
tests/test_dirs/3/: wincmd - Copy.ini
utest/: CMakeLists.txt  test.cpp
