cmake_minimum_required(VERSION 3.28)

project(tasks_thread VERSION ${PROJECT_VERSION})

add_library(${PROJECT_NAME} INTERFACE
    tasks_thread.h
)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

target_include_directories(${PROJECT_NAME} INTERFACE .)

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT example@example.com)
include(CPack)